      receiving side.

    * Got rid of support for protocol versions 17 and 18 (which are
      both over 6 years old).  (Wayne Davison)

    * More optimal data transmission for --hard-links (protocol 28).

    * More optimal data transmission for --checksum (protocol 28).

    * Less memory is used when --checksum is specified.

    * Less memory is used in the file list (a per-file savings).

    * The 2 pipes used between the receiver and generator processes
      (which are forked on the same machine) were reduced to 1 pipe
      and the protocol improved so that (1) it is now impossible to
      have the "redo" pipe fill up and hang rsync, and (2) trailing
      messages from the receiver don't get lost on their way through
      the generator over to the sender (the latter mainly affected
      hard-link messages).  (Wayne Davison)

    * The reading & writing of the file list in batch-mode is now
      handled by the same code that sends & receives the list over
      the wire.  This makes it much easier to maintain.

    * Optimized the -x (--one-file-system) flag's handling of any
      mount-point directories we encounter (it no longer scans the
      contents of the mount-point dirs, just to throw away the data).

    * Improved the internal uid/gid code to be more portable and
      a little more optimized.


NEWS for rsync 2.6.0 (1 Jan 2004)
Protocol: 27 (changed)
Changes since 2.5.7:

  ENHANCEMENTS:

    * "ssh" is now the default remote shell for rsync.  If you want to
      change this, configure like this:  "./configure --with-rsh=rsh".

    * Added --files-from, --no-relative, --no-implied-dirs, and --from0.
      Note that --from0 affects the line-ending character for all the
      files read by the --*-from options. (Wayne Davison)

    * Length of csum2 is now per-file starting with protocol version
      27. (J.W. Schultz)

    * Per-file dynamic block size is now sqrt(file length).  The